# rust-pong

./: .gitignore  Cargo.toml  generate match from str to enum KeyCode.py  generate match from str to enum KeyCode.txt  parameters.toml
.autogit/logs/: log-1-0-2024-16-52-31.txt  log-1-0-2024-17-22-48.txt  log-2-0-2024-18-21-1.txt  log-2-0-2024-18-51-18.txt  log-2-0-2024-19-21-34.txt  log-31-11-2023-16-18-29.txt  log-31-11-2023-17-18-54.txt  log-31-11-2023-17-54-35.txt  log-31-11-2023-18-24-54.txt  log-31-11-2023-18-55-7.txt
src/: bot.rs  main.rs  parameters.rs  types.rs
