[package]
name = "rust-pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
decorum = "0.3.1"
tuple-conv = "1.0.1"
itertools = "0.12.0"
bevy_framepace = "0.14.1"

# Enable a small amount of optimization in debug mode, for Bevy
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "breakout"
path = "src/breakout.rs"
